// Generated by j5build v0.0.0-20250403212908-de7c3c2e6cce. DO NOT EDIT

syntax = "proto3";

package test.v1.topic;

import "buf/validate/validate.proto";
import "google/protobuf/empty.proto";
import "j5/ext/v1/annotations.proto";
import "j5/messaging/v1/annotations.proto";
import "j5/state/v1/metadata.proto";
import "test/v1/greeting.j5s.proto";

service GreetingPublishTopic {
  option (j5.messaging.v1.service) = {
    topic_name: "greeting_publish"
    event: {
      entity_name: "test.v1.Greeting"
    }
  };

  rpc GreetingEvent(GreetingEventMessage) returns (google.protobuf.Empty) {}
}

message GreetingEventMessage {
  option (j5.ext.v1.message).object = {};

  j5.state.v1.EventPublishMetadata metadata = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  test.v1.GreetingKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  test.v1.GreetingEventType event = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).oneof = {}
  ];

  test.v1.GreetingData data = 4 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  test.v1.GreetingStatus status = 5 [
    (buf.validate.field) = {
      required: true
      enum: {
        defined_only: true
      }
    },
    (j5.ext.v1.field).enum = {}
  ];
}
